--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6dp"
-    tools:context=".ui.calendar.CalendarFragment">
+    tools:context=".ui.notes.NotesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,14 +17,14 @@
             android:id="@+id/text_gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Calendar"
+            android:text="Notes"
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/btn_event"
+            android:id="@+id/btn_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Event"/>
+            android:text="Note"/>
 
     </LinearLayout>
 
