--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,32 @@
         android:id="@+id/nav_calendar"
         android:name="app.khodko.planner.ui.calendar.CalendarFragment"
         android:label="@string/menu_calendar"
-        tools:layout="@layout/fragment_calendar" />
+        tools:layout="@layout/fragment_calendar" >
+        <action
+            android:id="@+id/action_nav_calendar_to_nav_event"
+            app:destination="@id/nav_event" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="app.khodko.planner.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_event"
+        android:name="app.khodko.planner.ui.event.EventFragment"
+        android:label="@string/menu_event"
+        tools:layout="@layout/fragment_event" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="app.khodko.planner.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_notes"
+        android:name="app.khodko.planner.ui.notes.NotesFragment"
+        android:label="@string/menu_notes"
+        tools:layout="@layout/fragment_notes" >
+        <action
+            android:id="@+id/action_nav_notes_to_nav_note"
+            app:destination="@id/nav_note" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_note"
+        android:name="app.khodko.planner.ui.note.NoteFragment"
+        android:label="@string/menu_note"
+        tools:layout="@layout/fragment_note" />
+
 </navigation>
