--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,18 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <item android:title="Main">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_calendar"
+                    android:icon="@drawable/ic_menu_gallery"
+                    android:title="@string/menu_calendar" />
 
-        <item
-            android:id="@+id/nav_calendar"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_calendar" />
+                <item
+                    android:id="@+id/nav_notes"
+                    android:icon="@drawable/ic_menu_camera"
+                    android:title="@string/menu_notes" />
 
-        <item
-            android:id="@+id/nav_notes"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_notes" />
+                <item
+                    android:id="@+id/nav_profile"
+                    android:icon="@drawable/ic_menu_camera"
+                    android:title="@string/menu_profile" />
 
-    </group>
+                <item
+                    android:id="@+id/nav_about"
+                    android:icon="@drawable/ic_menu_camera"
+                    android:title="@string/menu_about" />
+            </group>
+        </menu>
+    </item>
+
+    <item android:title="Action">
+        <menu>
+            <group android:checkableBehavior="none">
+                <item
+                    android:id="@+id/logout"
+                    android:icon="@drawable/ic_menu_camera"
+                    android:title="@string/menu_logout" />
+            </group>
+        </menu>
+    </item>
 
 </menu>
