--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,38 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item android:title="Main">
+    <item android:title="@string/menu_item_main">
         <menu>
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_calendar"
-                    android:icon="@drawable/ic_menu_gallery"
+                    android:icon="@drawable/ic_calendar_24"
                     android:title="@string/menu_calendar" />
 
                 <item
                     android:id="@+id/nav_notes"
-                    android:icon="@drawable/ic_menu_camera"
+                    android:icon="@drawable/ic_note_24"
                     android:title="@string/menu_notes" />
 
                 <item
                     android:id="@+id/nav_profile"
-                    android:icon="@drawable/ic_menu_camera"
+                    android:icon="@drawable/ic_person_24"
                     android:title="@string/menu_profile" />
 
                 <item
                     android:id="@+id/nav_about"
-                    android:icon="@drawable/ic_menu_camera"
+                    android:icon="@drawable/ic_info_24"
                     android:title="@string/menu_about" />
             </group>
         </menu>
     </item>
 
-    <item android:title="Action">
+    <item android:title="@string/menu_item_actions">
         <menu>
             <group android:checkableBehavior="none">
                 <item
                     android:id="@+id/logout"
-                    android:icon="@drawable/ic_menu_camera"
+                    android:icon="@drawable/ic_logout_24"
                     android:title="@string/menu_logout" />
             </group>
         </menu>
