--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -14,6 +14,16 @@
         android:orientation="vertical"
         android:padding="5dp">
 
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_image_outline_24"
+            android:contentDescription="@string/image_desc_image" />
+
         <TextView
             android:id="@+id/textError"
             android:layout_width="match_parent"
