--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/NestedScrollBarStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="6dp"
+    style="@style/NestedScrollBarStyle"
     tools:context=".ui.about.AboutFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="14dp">
 
         <TextView
-            android:id="@+id/text_gallery"
+            android:id="@+id/infoView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="About"
-            android:textSize="20sp" />
+            android:layout_marginTop="14dp"
+            android:textColor="@color/textColor"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
