--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6dp"
-    tools:context=".ui.notes.NotesFragment">
+    tools:context=".ui.addnote.AddNoteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,15 +17,8 @@
             android:id="@+id/text_gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Notes"
+            android:text="Add Note"
             android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btn_add_note"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add Note"/>
-
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
