--- a/app/src/main/res/layout/note_view_item.xml
+++ b/app/src/main/res/layout/note_view_item.xml
@@ -3,8 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/noteImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_image_outline_24"
+        tools:ignore="ContentDescription" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingStart="8sp"
+        android:paddingEnd="0sp">
 
         <TextView
             android:id="@+id/tittleView"
@@ -13,7 +29,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
@@ -25,6 +41,8 @@
             android:paddingVertical="2dp"
             android:textColor="@color/textColorLight"
             android:textSize="12sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
 
