--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -14,15 +14,30 @@
         android:orientation="vertical"
         android:padding="5dp">
 
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center_horizontal"
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:src="@drawable/ic_image_outline_24"
-            android:contentDescription="@string/image_desc_image" />
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:contentDescription="@string/image_desc_image"
+                android:src="@drawable/ic_image_outline_24" />
+
+            <ImageView
+                android:id="@+id/delete_image"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end"
+                android:src="@drawable/ic_delete_24"
+                tools:ignore="ContentDescription"
+                app:tint="@color/md_black_1000"
+                android:visibility="gone"/>
+        </FrameLayout>
 
         <TextView
             android:id="@+id/textError"
