--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -10,8 +10,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.favorites.FavoritesFragment">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/emptyList"
