--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -14,11 +14,27 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text_gallery"
+            android:id="@+id/tittleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Event"
-            android:textSize="20sp" />
+            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/dateView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/descriptionView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
