--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/card_input_date"
+                    android:text="@string/input_date"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -134,10 +134,10 @@
                 android:visibility="gone">
 
                 <TextView
+                    android:id="@+id/timeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/card_input_time"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
