--- a/app/src/main/res/layout/event_view_item.xml
+++ b/app/src/main/res/layout/event_view_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingVertical="4dp"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -11,7 +13,7 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:paddingStart="8sp"
-        android:paddingEnd="8sp">
+        android:paddingEnd="6sp">
 
         <TextView
             android:id="@+id/tittleView"
@@ -31,9 +33,29 @@
             android:maxLines="1"
             android:paddingVertical="2dp"
             android:textColor="@color/textColorLight"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/editImage"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/ic_edit_24"
+        app:tint="@color/colorSecondaryDark"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/deleteImage"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_delete_24"
+        app:tint="@color/colorSecondaryDark"
+        tools:ignore="ContentDescription" />
 
 </LinearLayout>
 
