--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,8 @@
     <color name="cardBackground">@color/md_white_1000</color>
     <color name="colorLight">@color/md_blue_grey_300</color>
 
+    <color name="calendarCurrentDayColor">@color/md_light_green_A200</color>
+    <color name="calendarMonthDayColor">@color/md_light_blue_100</color>
+    <color name="calendarAnotherDayColor">@color/md_light_blue_50</color>
+
 </resources>
