--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -4,9 +4,9 @@
     <item android:drawable="@color/splashScreenBackground" />
 
     <item
-            android:drawable="@drawable/cat_food_hearts_icon"
-            android:width="200dp"
-            android:height="200dp"
+            android:drawable="@drawable/splash_icon"
+            android:width="250dp"
+            android:height="250dp"
             android:gravity="center" />
 
 </layer-list>
