--- a/app/src/main/res/layout/calendar_cell_layout.xml
+++ b/app/src/main/res/layout/calendar_cell_layout.xml
@@ -21,6 +21,7 @@
         android:layout_gravity="center"
         android:textSize="10sp"
         android:textStyle="bold"
+        android:textColor="@color/colorAccent"
         tools:ignore="SmallSp" />
 
 </LinearLayout>
