--- a/app/src/main/res/layout/event_view_item.xml
+++ b/app/src/main/res/layout/event_view_item.xml
@@ -44,7 +44,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="12dp"
         android:src="@drawable/ic_edit_24"
-        app:tint="@color/colorSecondaryDark"
+        app:tint="@color/colorAccent"
         tools:ignore="ContentDescription" />
 
     <ImageView
@@ -54,7 +54,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:src="@drawable/ic_delete_24"
-        app:tint="@color/colorSecondaryDark"
+        app:tint="@color/colorAccent"
         tools:ignore="ContentDescription" />
 
 </LinearLayout>
