--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -37,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:layout_marginBottom="6dp"
+                    android:textColor="@color/textColorDark"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="16sp" />
@@ -51,6 +52,7 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="@string/no_events"
+                        android:textColor="@color/textColorDark"
                         android:textSize="20sp"
                         android:visibility="gone" />
 
