--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -90,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/input_date"
+                    android:textColor="@color/textColorDark"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -138,6 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:textColor="@color/textColorDark"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
