--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,9 +33,8 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
-                android:src="@drawable/ic_delete_24"
+                android:src="@drawable/ic_close_24"
                 tools:ignore="ContentDescription"
-                app:tint="@color/md_black_1000"
                 android:visibility="gone"/>
         </FrameLayout>
 
@@ -46,7 +45,7 @@
             android:layout_marginTop="10dp"
             android:checked="false"
             android:text="@string/switch_themes"
-            android:textColor="@color/textColorLight"
+            android:textColor="@color/textColorDark"
             android:textSize="16sp"
             android:textStyle="bold"
             app:switchPadding="10dp" />
