--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,35 @@
 
     <!-- AppTheme colors -->
     <color name="colorPrimary">@color/colorSecondary</color>
+    <color name="colorPrimaryDark">@color/md_indigo_900</color>
+    <color name="colorAccent">@color/colorSecondary</color>
+    <color name="colorSecondary">@color/md_indigo_700</color>
+    <color name="colorSecondaryDark">@color/md_indigo_900</color>
+    <color name="toolbarBackground">@color/md_white_1000</color>
+    <color name="splashScreenBackground">@color/md_cyan_100</color>
+
+    <!-- text colors -->
+    <color name="textColorLight">@color/md_blue_grey_500</color>
+    <color name="textColor">@color/md_blue_grey_800</color>
+    <color name="textColorDark">@color/md_indigo_900</color>
+    <color name="textColorHint">@color/md_blue_grey_300</color>
+    <color name="textColorActionMenu">@color/md_white_1000</color>
+    <color name="textColorOnDark">@color/md_white_1000</color>
+    <color name="textColorRequied">@color/md_red_700</color>
+
+    <!-- app colors -->
+    <color name="appBackground">#F0F2FF</color>
+    <color name="cardBackground">#F0F2FF</color>
+    <color name="colorLight">@color/md_blue_grey_300</color>
+
+    <color name="calendarCurrentDayColor">@color/md_light_green_A200</color>
+    <color name="calendarMonthDayColor">@color/appBackground</color>
+    <color name="calendarAnotherDayColor">@color/md_blue_grey_50</color>
+    <color name="calendarMonthDayTextColor">@color/textColorDark</color>
+    <color name="calendarAnotherDayTextColor">@color/textColorHint</color>
+
+    <!--
+    <color name="colorPrimary">@color/colorSecondary</color>
     <color name="colorPrimaryDark">@color/md_orange_900</color>
     <color name="colorAccent">@color/colorSecondary</color>
     <color name="colorSecondary">@color/md_orange_700</color>
@@ -10,7 +39,7 @@
     <color name="toolbarBackground">@color/md_white_1000</color>
     <color name="splashScreenBackground">@color/md_cyan_100</color>
 
-    <!-- text colors -->
+
     <color name="textColorLight">@color/md_blue_grey_500</color>
     <color name="textColor">@color/md_blue_grey_800</color>
     <color name="textColorDark">@color/md_blue_grey_900</color>
@@ -19,7 +48,7 @@
     <color name="textColorOnDark">@color/md_white_1000</color>
     <color name="textColorRequied">@color/md_red_700</color>
 
-    <!-- app colors -->
+
     <color name="appBackground">@color/md_blue_grey_50</color>
     <color name="cardBackground">@color/md_white_1000</color>
     <color name="colorLight">@color/md_blue_grey_300</color>
@@ -27,5 +56,6 @@
     <color name="calendarCurrentDayColor">@color/md_light_green_A200</color>
     <color name="calendarMonthDayColor">@color/md_light_blue_100</color>
     <color name="calendarAnotherDayColor">@color/md_light_blue_50</color>
+    -->
 
 </resources>
