--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,15 +5,15 @@
     <color name="colorPrimary">@color/colorSecondary</color>
     <color name="colorPrimaryDark">@color/md_indigo_900</color>
     <color name="colorAccent">@color/colorSecondary</color>
-    <color name="colorSecondary">@color/md_indigo_700</color>
+    <color name="colorSecondary">@color/md_indigo_400</color>
     <color name="colorSecondaryDark">@color/md_indigo_900</color>
     <color name="toolbarBackground">@color/md_white_1000</color>
-    <color name="splashScreenBackground">@color/md_cyan_100</color>
+    <color name="splashScreenBackground">#BCC2FF</color>
 
     <!-- text colors -->
     <color name="textColorLight">@color/md_blue_grey_500</color>
     <color name="textColor">@color/md_blue_grey_800</color>
-    <color name="textColorDark">@color/md_indigo_900</color>
+    <color name="textColorDark">#01023B</color>
     <color name="textColorHint">@color/md_blue_grey_300</color>
     <color name="textColorActionMenu">@color/md_white_1000</color>
     <color name="textColorOnDark">@color/md_white_1000</color>
@@ -24,7 +24,7 @@
     <color name="cardBackground">#F0F2FF</color>
     <color name="colorLight">@color/md_blue_grey_300</color>
 
-    <color name="calendarCurrentDayColor">@color/md_light_green_A200</color>
+    <color name="calendarCurrentDayColor">#BCC2FF</color>
     <color name="calendarMonthDayColor">@color/appBackground</color>
     <color name="calendarAnotherDayColor">@color/md_blue_grey_50</color>
     <color name="calendarMonthDayTextColor">@color/textColorDark</color>
