--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -5,7 +5,7 @@
     style="@style/NestedScrollBarStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="6dp"
+    android:padding="10dp"
     tools:context=".ui.event.EventFragment">
 
     <LinearLayout
@@ -14,11 +14,31 @@
         android:orientation="vertical">
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/textColorDark"
+            android:textStyle="bold"
+            android:text="@string/text_tittle"
+            android:textSize="18sp" />
+
+        <TextView
             android:id="@+id/tittleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
             android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/textColorDark"
+            android:textStyle="bold"
+            android:text="@string/text_event_date"
             android:textSize="18sp" />
 
         <TextView
@@ -26,13 +46,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/textColorDark"
+            android:textStyle="bold"
+            android:text="@string/text_repeat"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/repeatView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/textColorDark"
+            android:textStyle="bold"
+            android:text="@string/text_description"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/descriptionView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
             android:textSize="14sp" />
 
     </LinearLayout>
