--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/custom_calendar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/appBackground"
+    android:background="@color/appBackground"
     android:orientation="vertical">
 
     <LinearLayout
